test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/extra_credit/file_scope_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  identifier(x)
  :
  int
  identifier(foo)
  =
  const int(0)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
